app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
  namespace: app-dev
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app
